<resources>
    <string name="app_name">Ananas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_settings">Settings</string>

    <string name="function_not_implemented">This function has not been implemented yet.</string>

    <!-- Strings -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Your password is too short</string>
    <string name="error_incorrect_password">Your password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register"><a href="http://matrix.org/docs/projects/try-matrix-now.html#servers">Don\'t have an account?</a></string>
    <string name="prompt_server">Matrix server</string>
    <string name="error_invalid_server">This server address is invalid</string>
    <string name="error_incorrect_credentials">This email or password is incorrect</string>
    <string name="error_server_unreachable">This server is unreachable</string>
    <string name="default_matrix_server">https://matrix.org/</string>
    <string name="advanced_options">Advanced options</string>
    <string name="create_new_group">New Group</string>
    <string name="group_name">Group name</string>
    <string name="no_contact_select">Add people to this group by clicking on a contact or by searching for their username.</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="phone_hint">Phone</string>
    <string name="pid3_hint">3PID</string>
    <string name="pid3_type_hint">Type</string>
    <string name="no_contacts">You don\'t have any contacts :(</string>
    <string name="enable_end_to_end_encryption">Enable end to end encryption</string>
    <string name="create_the_group">Create the group</string>
    <string name="search_for_contacts">Search for contacts</string>
    <string name="disable_end_to_end_encryption">Disable end to end encryption</string>
    <string name="choose_picture">Choose picture</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sign_in_to_matrix">Sign in to Matrix</string>

    <string name="pref_privacy_title">Privacy Settings</string>
    <string name="pref_data_title">Data Usage &amp; Settings</string>
    <string name="pref_encryption_title">Encryption Settings</string>
    <string name="pref_locale_title">Locale Settings</string>
    <string name="pref_notification_title">Notification Settings</string>
    <string name="pref_profile_title">Profile Settings</string>
    <string name="pref_theme_title">Theme &amp; Looks Settings</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="arrow_down_up_description">Arrow down or up</string>
    <string name="logging_in">Logging in…</string>
    <string name="please_wait">Please wait</string>
    <string name="log_in_failed">Log in failed</string>
    <string name="retry">Retry</string>
    <string name="logo_description">Ananas logo</string>
    <string name="phone_number_invalid">Your phone number is not valid</string>


    <string-array name="pref_privacy_contact_type">
        <item>Everyone</item>
        <item>Contacts only</item>
        <item>No-one</item>
    </string-array>
    <string-array name="pref_privacy_contact_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_locale_languages">
        <item>English</item>
    </string-array>
    <string-array name="pref_locale_languages_values">
        <item>en</item>
    </string-array>
</resources>
